--- a/Views/footer.ejs
+++ b/Views/footer.ejs
@@ -72,7 +72,7 @@
     });
 
     $(document).ready(function(){
-        $.ajax({ url: "https://newsapi.org/v2/everything?q=bitcoin&from=2020-02-12&sortBy=publishedAt&apiKey=ee0269535b644a878a588ded696f6819",
+        $.ajax({ url: ,
                 context: document.body,
                 success: function(data){
                     console.log(data);
